--- a/main.tex
+++ b/main.tex
@@ -346,7 +346,7 @@ Soit $0<\epsilon<1$, $m$ le mesure de Lebesgue et $A$ un Lebesgue-mesurable. On 
 Montrer que $m(A)=0$.
 }}\\ \\
 
-Solution: Soit $\epsilon' >0$. D'après 4.2, on dispose d'un ouvert $G$ tel que $A\subset G$ et $m(G\setminus A)\leq \epsilon'$. Pour tout intervalle $I$ on a $m(A\cap I) + m($ un autre test
+Solution: Soit $\epsilon' >0$. D'après 4.2, on dispose d'un ouvert $G$ tel que $A\subset G$ et $m(G\setminus A)\leq \epsilon'$. Pour tout intervalle $I$ on a $m(A\cap I) + m($ test de commit depuis github
 
 
 
