--- a/main.tex
+++ b/main.tex
@@ -339,14 +339,14 @@ $\mu$ est finie, $\mu(F^c)=0$ et si $G$ est un fermé tel que $\mu(G^c)=0$, alor
 \parbox{0.9\textwidth}{
 }}
 
-% TENIR COMPTE DES MODIFS DE L EXO 4.2
+
 \subsection{} \fbox{
 \parbox{0.9\textwidth}{
 Soit $0<\epsilon<1$, $m$ le mesure de Lebesgue et $A$ un Lebesgue-mesurable. On suppose que pour tout intervalle $I$, on a $m(A\cap I) \leq (1-\epsilon) m(I)$. \newline
 Montrer que $m(A)=0$.
 }}\\ \\
 
-Solution: Soit $\epsilon' >0$. D'après 4.2, on dispose d'un ouvert $G$ tel que $A\subset G$ et $m(G\setminus A)\leq \epsilon'$. Pour tout intervalle $I$ on a $m(A\cap I) + m($ test de commit depuis github
+Solution: Soit $\epsilon' >0$. D'après 4.2, on dispose d'un ouvert $G$ tel que $A\subset G$ et $m(G\setminus A)\leq \epsilon'$. Pour tout intervalle $I$ on a \newline \centerline{$\begin{aligned}[t] m(A\cap I) + m((G\setminus A)\cap I) &\leq (1-\epsilon)m(I) + m((G\setminus A)\cap I)\\\implies m(G \cap I) &\leq (1-\epsilon)m(I) + m((G\setminus A))\\ \implies m(G \cap I) &\leq (1-\epsilon)m(I) + \epsilon' \end{aligned}$ }
 
 
 
