--- a/main.tex
+++ b/main.tex
@@ -317,7 +317,7 @@ Solution: (1) $B$ est intersection dénombrable de Lebesgue-mesurables. \newline
 
 \subsection{} \fbox{
 \parbox{0.9\textwidth}{
-Soit $0<\epsilon<1$ et $m$ la mesure de Lebesgue. Exhiber un mesurable $E\subset [0,1]$ dont l'adhérence est $[0,1]$ et dont la mesure est nulle.
+Soit $0<\epsilon<1$ et $m$ la mesure de Lebesgue. Exhiber un mesurable $E\subset [0,1]$ dont l'adhérence est $[0,1]$ et de mesure $\epsilon$.
 }}\\\\
 
 Solution: Montrons que $E=\left([0,\epsilon] \cap \mathbb Q^c \right) \cup \left( [0,1] \cap \mathbb Q\right)$ convient. \newline
