--- a/main.tex
+++ b/main.tex
@@ -381,7 +381,7 @@ $0<m(A\cap I)<m(I)$ pour tout intervalle ouvert $I$ non réduit à un point.
 }}\\\\
 
 Solution: Démontrons d'abord le lemme suivant: \newline \newline
-\fbox{\parbox{0.9\textwidth}{ Soit $I$ un intervalle de $\mathbb R$ non réduit à un point. Alors pour tout $0<\delta< m(I)$,\newline
+\fbox{\parbox{0.9\textwidth}{ Soit $I$ un intervalle de $\mathbb R$ non réduit à un point. Alors pour tout \newline $0<\delta< m(I)$,
  $I$ contient un fermé d'intérieur vide de mesure $\delta$.
 }} \\ \\
 On s'inspire de la construction de l'ensemble de Cantor. \newline
@@ -401,7 +401,7 @@ Considérons une suite $(a_n)_{n\geq 1}$ de réels $>0$ telle que $\sum_{n=1}^\i
  &< m(M\cap I) + M(N_k) \\
  &= m((M\cap I)\cup N_k) \quad \text{car disjoints}\\
  &\leq m(I) \quad \text{car inclus dans I}\end{aligned}$\newline
- Conclusion: $0<m(M\cap I)<m(I)$
+ Conclusion: $0<m(M\cap I)<m(I)$.
 
 
 
