--- a/main.tex
+++ b/main.tex
@@ -435,7 +435,7 @@ et en sommant $\begin{aligned}[t]\ell(X)=\mu^*(A)+\mu^*(A^c) &= \mu^*(A\cap E)+\
 &= \ell(X) \quad \text{$\mu^*$ et $\ell$ coincident sur $\mathcal A$} \end{aligned} $\newline \newline
 Les inégalités sont donc des égalités, donc  $\mu^*(A\cap E) + \mu^*(A^c\cap E) = \mu^*(E)$.\newline 
 \newline
-Revenons au cas général: soit $E\subset X$.  Soit $\epsilon >0$. On dispose de $(B_i)$ une suite d'éléments de $\mathcal A$ telle que $E\subset \cup_i B_i$ et $\sum_i \ell(B_i)\leq \mu^*(E) + \epsilon$. \newline Les $B_i$ étant dans $\mathcal A$, ils sont $\mu^*$-mesurables (résultat prouvé dans le cours et spécifique aux algèbres), donc $\cup_i B_i^$ est $\mu^*$-mesurable, avec \newline 
+Revenons au cas général: soit $E\subset X$.  Soit $\epsilon >0$. On dispose de $(B_i)$ une suite d'éléments de $\mathcal A$ telle que $E\subset \cup_i B_i$ et $\sum_i \ell(B_i)\leq \mu^*(E) + \epsilon$. \newline Les $B_i$ étant dans $\mathcal A$, ils sont $\mu^*$-mesurables (résultat prouvé dans le cours et spécifique aux algèbres), donc $\cup_i B_i$ est $\mu^*$-mesurable, avec \newline 
 \centerline{$\mu^*(\cup_i B_i)\leq \sum_i \mu^*(B_i) = \sum_i \ell (B_i) \leq \mu^*(E)+\epsilon$ } \newline
 On a $$\begin{aligned}[t]\mu^*(A\cap E) + \mu^*(A^c\cap E) &\leq \mu^*(A\cap (\cup_i B_i)) + \mu^*(A^c\cap (\cup_i B_i)) \\
 &= \mu^*(\cup_i B_i) \quad \text{ car $\cup_i B_i$ mesurable} \\
